--- a/prerender-links.html
+++ b/prerender-links.html
@@ -53,18 +53,18 @@
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-91c570b8.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/SvelteTooltip-456285a5.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-a523c6ba.js">
+		<link rel="modulepreload" href="./_app/immutable/start-11988de7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-6738d5d5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-8c1c4e73.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-4904e76a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control-e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-e82bd777.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-2b074143.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-c14b6e90.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-4b2dd576.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/bundle-e5d9ead9.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/bundle-01df7d0f.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Transition-c93588f5.js">
-		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-095c8526.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-ebd0567d.js">
+		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-fc8680c9.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-0e842f2a.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/prerender-links/_page.svelte-9c0f3b03.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/marked.esm-0b02a870.js"><title>UTXO.23 - Otevřená komunitní kryptoměnová konference</title><!-- HEAD_svelte-udpgl9_START --><!-- HEAD_svelte-udpgl9_END -->
 	</head>
@@ -101,7 +101,7 @@
 
       <main><div>
   
-  <ul><li><a href="/lide/adam-hrazdira" class="href">Adam Hrazdira</a></li><li><a href="/lide/adam-kracik" class="href">Adam Kracík</a></li><li><a href="/lide/adam-sobotka" class="href">Adam Sobotka</a></li><li><a href="/lide/david-stancel" class="href">David Stancel</a></li><li><a href="/lide/dominika-v" class="href">Dominika V</a></li><li><a href="/lide/frantisek-kudrna" class="href">František Kudrna</a></li><li><a href="/lide/huge" class="href">Huge</a></li><li><a href="/lide/hynek-jina" class="href">Hynek Jína</a></li><li><a href="/lide/jacob-jelen" class="href">Jacob Jelen</a></li><li><a href="/lide/jakub-jedlinsky" class="href">Jakub Jedlinský</a></li><li><a href="/lide/jan-cerny" class="href">Jan Černý</a></li><li><a href="/lide/jan-21m" class="href">Jan Kohout</a></li><li><a href="/lide/jan-zibner" class="href">Jan Zibner</a></li><li><a href="/lide/jiri-cepelka" class="href">Jiří Čepelka</a></li><li><a href="/lide/jiri-skrivan" class="href">Jiří Skřivan</a></li><li><a href="/lide/josef-gattermayer" class="href">Josef Gattermayer</a></li><li><a href="/lide/julie-sislerova" class="href">Julie Šislerová</a></li><li><a href="/lide/juraj-bednar" class="href">Juraj Bednár</a></li><li><a href="/lide/karel-fillner" class="href">Karel Fillner</a></li><li><a href="/lide/kirill-juran" class="href">Kirill Juran</a></li><li><a href="/lide/libor-flossler" class="href">Libor Flössler</a></li><li><a href="/lide/lukas-kovanda" class="href">Lukáš Kovanda</a></li><li><a href="/lide/mario-havel" class="href">Mario Havel</a></li><li><a href="/lide/martin-bok" class="href">Martin Bok</a></li><li><a href="/lide/martin-janik" class="href">Martin Janík</a></li><li><a href="/lide/michal-novak" class="href">Michal Novák</a></li><li><a href="/lide/sodomak" class="href">Milan Půlkrábek</a></li><li><a href="/lide/ondrej-rehacek" class="href">Ondřej Řeháček</a></li><li><a href="/lide/pavol-luptak" class="href">Pavol Lupták</a></li><li><a href="/lide/petr-hotovec" class="href">Petr Hotovec</a></li><li><a href="/lide/petr-lukac" class="href">Petr Lukáč</a></li><li><a href="/lide/petr-mensik" class="href">Petr Menšík</a></li><li><a href="/lide/petr-sanetrnik" class="href">Petr Sanetrník</a></li><li><a href="/lide/radek-svarz" class="href">Radek Švarz</a></li><li><a href="/lide/radim-kozub" class="href">Radim Kozub</a></li><li><a href="/lide/stanislav-simek" class="href">Stanislav Šimek</a></li><li><a href="/lide/tereza-starostova" class="href">Tereza Starostová</a></li><li><a href="/lide/fetyas" class="href">Tomáš Kalabis</a></li><li><a href="/lide/tree" class="href">tree</a></li><li><a href="/lide/urza" class="href">Urza</a></li><li><a href="/lide/vojtech-pour" class="href">Vojtěch Pour</a></li></ul></div></main></div>
+  <ul><li><a href="/lide/adam-hrazdira" class="href">Adam Hrazdira</a></li><li><a href="/lide/adam-kracik" class="href">Adam Kracík</a></li><li><a href="/lide/adam-sobotka" class="href">Adam Sobotka</a></li><li><a href="/lide/david-stancel" class="href">David Stancel</a></li><li><a href="/lide/dominika-v" class="href">Dominika V</a></li><li><a href="/lide/frantisek-kudrna" class="href">František Kudrna</a></li><li><a href="/lide/huge" class="href">Huge</a></li><li><a href="/lide/hynek-jina" class="href">Hynek Jína</a></li><li><a href="/lide/jacob-jelen" class="href">Jacob Jelen</a></li><li><a href="/lide/jakub-jedlinsky" class="href">Jakub Jedlinský</a></li><li><a href="/lide/jan-cerny" class="href">Jan Černý</a></li><li><a href="/lide/jan-21m" class="href">Jan Kohout</a></li><li><a href="/lide/jan-zibner" class="href">Jan Zibner</a></li><li><a href="/lide/jiri-cepelka" class="href">Jiří Čepelka</a></li><li><a href="/lide/jiri-skrivan" class="href">Jiří Skřivan</a></li><li><a href="/lide/josef-gattermayer" class="href">Josef Gattermayer</a></li><li><a href="/lide/julie-sislerova" class="href">Julie Šislerová</a></li><li><a href="/lide/juraj-bednar" class="href">Juraj Bednár</a></li><li><a href="/lide/karel-fillner" class="href">Karel Fillner</a></li><li><a href="/lide/kirill-juran" class="href">Kirill Juran</a></li><li><a href="/lide/libor-flossler" class="href">Libor Flössler</a></li><li><a href="/lide/lukas-kovanda" class="href">Lukáš Kovanda</a></li><li><a href="/lide/mario-havel" class="href">Mario Havel</a></li><li><a href="/lide/martin-bok" class="href">Martin Bok</a></li><li><a href="/lide/martin-janik" class="href">Martin Janík</a></li><li><a href="/lide/sodomak" class="href">Milan Půlkrábek</a></li><li><a href="/lide/ondrej-rehacek" class="href">Ondřej Řeháček</a></li><li><a href="/lide/pavol-luptak" class="href">Pavol Lupták</a></li><li><a href="/lide/petr-hotovec" class="href">Petr Hotovec</a></li><li><a href="/lide/petr-lukac" class="href">Petr Lukáč</a></li><li><a href="/lide/petr-mensik" class="href">Petr Menšík</a></li><li><a href="/lide/petr-sanetrnik" class="href">Petr Sanetrník</a></li><li><a href="/lide/radek-svarz" class="href">Radek Švarz</a></li><li><a href="/lide/radim-kozub" class="href">Radim Kozub</a></li><li><a href="/lide/stanislav-simek" class="href">Stanislav Šimek</a></li><li><a href="/lide/tereza-starostova" class="href">Tereza Starostová</a></li><li><a href="/lide/fetyas" class="href">Tomáš Kalabis</a></li><li><a href="/lide/tree" class="href">tree</a></li><li><a href="/lide/urza" class="href">Urza</a></li><li><a href="/lide/vladimir-pinker" class="href">Vladimír Pinker</a></li><li><a href="/lide/vojtech-pour" class="href">Vojtěch Pour</a></li></ul></div></main></div>
     <div class="bg-gradient-to-b from-custom-darkpurple to-custom-darkestpurple text-white print:hidden"><div class="relative mx-auto px-6 pt-10 pb-2 sm:pb-6 max-w-7xl sm:flex pr-4"><div class="flex-1"><div><a href="/"><img src="/img/logo.svg" alt="UTXO.23" class="w-32"></a></div>
         <div class="mt-4 font-semibold">3.-4. červen 2023 @ Gabriel Loci, Praha
         </div>
@@ -122,14 +122,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="jsph6z">
-			import { start } from "./_app/immutable/start-a523c6ba.js";
+		<script type="module" data-sveltekit-hydrate="1fhp9sf">
+			import { start } from "./_app/immutable/start-11988de7.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="jsph6z"]').parentNode,
-				version: "1679517842384",
+				target: document.querySelector('[data-sveltekit-hydrate="1fhp9sf"]').parentNode,
+				version: "1679688651820",
 				hydrate: {
 					node_ids: [0, 11],
 					data: [null,null],
