--- a/vyzvednuti-vstupenky.html
+++ b/vyzvednuti-vstupenky.html
@@ -51,13 +51,13 @@
     }
     </script>
     <meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-91c570b8.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-55af9c3f.js">
+		<link href="./_app/immutable/assets/_layout-c3816605.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-568b57ff.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-6738d5d5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-8c1c4e73.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-4904e76a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control-e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-fbfc0feb.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-9cdeea1e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-c14b6e90.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-4b2dd576.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/bundle-bf62c3b0.js">
@@ -93,6 +93,9 @@
                 </li><li class="relative"><a sveltekit:prefetch href="/fotky" target="_self" class="block py-4 pl-3 pr-4 text-white rounded hover:bg-white/20 md:hover:bg-transparent md:border-0 md:hover:underline md:hover:decoration-custom-green md:hover:decoration-2 md:hover:underline-offset-4 md:p-0 false">Fotky 2022<!-- HTML_TAG_START --><!-- HTML_TAG_END --></a>
                     <div class="md:hidden border-b absolute bottom-0 left-1/4 border-custom-green/50 w-1/2"></div>
                     
+                </li><li class="relative"><a sveltekit:prefetch href="https://prgblockweek.com/" target="_blank" class="block py-4 pl-3 pr-4 text-white rounded hover:bg-white/20 md:hover:bg-transparent md:border-0 md:hover:underline md:hover:decoration-custom-green md:hover:decoration-2 md:hover:underline-offset-4 md:p-0 false">#PBW23<!-- HTML_TAG_START -->&nbsp;<i class="fa-solid fa-up-right-from-square fa-sm opacity-70"></i><!-- HTML_TAG_END --></a>
+                    <div class="md:hidden border-b absolute bottom-0 left-1/4 border-custom-green/50 w-1/2"></div>
+                    
                 </li></ul>
           <div class="m-auto"><div class="flex block space-x-6 md:space-x-2 m-auto w-full justify-end text-center"><a href="https://twitter.com/utxoprague" class="w-6 h-6 bg-white rounded-lg hover:bg-utxo-gradient hover:text-white" target="_blank" rel="noreferrer"><i class="fa-brands fa-twitter"></i>
         </a><a href="https://www.instagram.com/utxoprague/" class="w-6 h-6 bg-white rounded-lg hover:bg-utxo-gradient hover:text-white" target="_blank" rel="noreferrer"><i class="fab fa-instagram"></i>
@@ -125,14 +128,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="riizrd">
-			import { start } from "./_app/immutable/start-55af9c3f.js";
+		<script type="module" data-sveltekit-hydrate="4q3g5d">
+			import { start } from "./_app/immutable/start-568b57ff.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="riizrd"]').parentNode,
-				version: "1679699129440",
+				target: document.querySelector('[data-sveltekit-hydrate="4q3g5d"]').parentNode,
+				version: "1679907377276",
 				hydrate: {
 					node_ids: [0, 13],
 					data: [null,null],
